infrastructure/yml/cms-dev/dev-harbor-network-routes-use1.cfn.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Routing for dev-harbor-network-vpc-subnets-use1
Resources:
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: dev-harbor-network-routes-use1-Public
      VpcId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-VpcId
  QuadZeroToIgwRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Fn::ImportValue: dev-harbor-network-gateways-use1-InternetGatewayId
      RouteTableId:
        Ref: PublicRouteTable
  ApplicationsRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: dev-harbor-network-vpc-subnets-use1-ApplicationsRouteTableA
      VpcId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-VpcId
  QuadZeroToNatRouteA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::ImportValue: dev-harbor-network-gateways-use1-NatGatewayAId
      RouteTableId:
        Ref: ApplicationsRouteTableA
  ApplicationsRouteTableAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ApplicationsRouteTableA
      SubnetId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-SubnetApplicationsAId
  PublicRouteTableAAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-SubnetPublicAId
  ApplicationsRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: dev-harbor-network-vpc-subnets-use1-ApplicationsRouteTableB
      VpcId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-VpcId
  QuadZeroToNatRouteB:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Fn::ImportValue: dev-harbor-network-gateways-use1-NatGatewayBId
      RouteTableId:
        Ref: ApplicationsRouteTableB
  ApplicationsRouteTableBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ApplicationsRouteTableB
      SubnetId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-SubnetApplicationsBId
  PublicRouteTableBAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      SubnetId:
        Fn::ImportValue: dev-harbor-network-vpc-subnets-use1-SubnetPublicBId
Outputs:
  PublicRouteTableId:
    Value:
      Ref: PublicRouteTable
    Export:
      Name: dev-harbor-network-routes-use1-PublicRouteTableId
  ApplicationsRouteTableAId:
    Value:
      Ref: ApplicationsRouteTableA
    Export:
      Name: dev-harbor-network-routes-use1-ApplicationsRouteTableAId
  ApplicationsRouteTableBId:
    Value:
      Ref: ApplicationsRouteTableB
    Export:
      Name: dev-harbor-network-routes-use1-ApplicationsRouteTableBId
